z-index issue

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -213,7 +213,7 @@ div[role="sidebar"]{
 		padding:10px;
 		margin-top:40px;
 		top:45px;
-		z-index:1;
+		z-index:1000;
 		margin-left:-1px;
 		border-radius:5px 0px 0px 5px;
 		right:-50%;
@@ -228,6 +228,7 @@ div[role="sidebar"]{
 	@media screen and (max-width: 600px) {
 		float:none;
 		top:28px;
+		z-index:1000;
 	}
 }
 
